feat: goal schedule 关联功能实现
