# src/main/java/com/life/yolo/dto/GoalWithStatsDto.java
@@ -4,8 +4,11 @@ import com.life.yolo.entity.Goal;
 import lombok.Data;
 import lombok.EqualsAndHashCode;
 
+import java.util.List;
+
 @Data
 @EqualsAndHashCode(callSuper = true)
 public class GoalWithStatsDto extends Goal {
     private Long last7DaysMinutes;
+    private List<String> typeCodes;
 }
